--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-firebase/auth": "^15.3.0",
     "@react-native-firebase/firestore": "^15.3.0",
     "@react-native-firebase/storage": "^15.3.0",
+    "@react-navigation/material-top-tabs": "^6.2.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
@@ -26,8 +27,10 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-otp-inputs": "^7.4.0",
     "react-native-otp-textinput": "^0.0.9",
+    "react-native-pager-view": "^5.4.25",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
+    "react-native-tab-view": "^3.1.1",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
