--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/redux-logger": "^3.0.9",
     "react": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-gifted-chat": "^1.0.4",
     "react-native-image-crop-picker": "^0.38.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-otp-inputs": "^7.4.0",
