--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.9",
+    "@react-native-clipboard/clipboard": "^1.11.0",
     "@react-native-community/checkbox": "^0.5.12",
     "@react-native-firebase/app": "^15.3.0",
     "@react-native-firebase/auth": "^15.3.0",
@@ -23,6 +24,7 @@
     "@types/redux-logger": "^3.0.9",
     "react": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-gifted-chat": "^1.0.4",
     "react-native-image-crop-picker": "^0.38.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-otp-inputs": "^7.4.0",
